# gtest_cmake_tempcontrol

./: CMakeLists.txt  README.md
main/: CMakeLists.txt
temperaturecontrol/: CMakeLists.txt  main.cpp  temperaturecontrol.cpp  temperaturecontrol.h
test/: CMakeLists.txt
test/testtemperaturecontrol/: CMakeLists.txt  mocktemperaturecontrol.h  testtemperaturecontrol.cpp  testtemperaturecontrol.h
